--- a/Includes/Bibliography/_ref_2013.bib
+++ b/Includes/Bibliography/_ref_2013.bib
@@ -71,3 +71,14 @@
  year={2013},
  publisher={Elsevier}
 }
+
+@article{schenk2013imaging,
+  title={Imaging nanocarbon materials: soot particles in flames are not structurally homogeneous},
+  author={Schenk, Marina and Lieb, Sydnie and Vieker, Henning and Beyer, Andr{\'e} and G{\"o}lzh{\"a}user, Armin and Wang, Hai and Kohse-H{\"o}inghaus, Katharina},
+  journal={ChemPhysChem},
+  volume={14},
+  number={14},
+  pages={3248--3254},
+  year={2013},
+  publisher={Wiley Online Library}
+}
