--- a/Includes/Bibliography/_ref_2019.bib
+++ b/Includes/Bibliography/_ref_2019.bib
@@ -138,3 +138,24 @@
   year={2019},
   publisher={ACS Publications}
 }
+
+@article{commodo2019early,
+  title={On the early stages of soot formation: Molecular structure elucidation by high-resolution atomic force microscopy},
+  author={Commodo, Mario and Kaiser, Katharina and De Falco, Gianluigi and Minutolo, Patrizia and Schulz, Fabian and D'Anna, Andrea and Gross, Leo},
+  journal={Combustion and Flame},
+  volume={205},
+  pages={154--164},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{schulz2019insights,
+  title={Insights into incipient soot formation by atomic force microscopy},
+  author={Schulz, Fabian and Commodo, Mario and Kaiser, Katharina and De Falco, Gianluigi and Minutolo, Patrizia and Meyer, Gerhard and DAnna, Andrea and Gross, Leo},
+  journal={Proceedings of the Combustion Institute},
+  volume={37},
+  number={1},
+  pages={885--892},
+  year={2019},
+  publisher={Elsevier}
+}
