--- a/Includes/Bibliography/_ref_2021.bib
+++ b/Includes/Bibliography/_ref_2021.bib
@@ -128,3 +128,13 @@
   year={2021},
   publisher={Elsevier}
 }
+
+@article{kholghy2021morphology,
+  title={Morphology, composition and optical properties of jet engine-like soot made by a spray flame},
+  author={Kholghy, M Reza and DeRosa, Valentina G},
+  journal={Combustion and Flame},
+  volume={231},
+  pages={111480},
+  year={2021},
+  publisher={Elsevier}
+}
