--- a/Includes/Bibliography/_ref_2023.bib
+++ b/Includes/Bibliography/_ref_2023.bib
@@ -59,3 +59,13 @@
   year={2023},
   publisher={Elsevier}
 }
+
+@incollection{dames2023plasma,
+  title={Plasma chemistry and plasma reactors for turquoise hydrogen and carbon nanomaterials production},
+  author={Dames, Enoch and Rohani, Vandad and Fulcheri, Laurent},
+  booktitle={Advances in Chemical Engineering},
+  volume={61},
+  pages={253--317},
+  year={2023},
+  publisher={Elsevier}
+}
