--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,8 @@
 \include{Includes/title}
 \maketitle
 % ------------------------------------------------------------ %
+\include{Includes/submissionguide}
+\include{Includes/nomenclature}
 \input{Includes/introduction}
 \input{Includes/theory}
 \input{Includes/validation}
@@ -17,5 +19,7 @@
 % ------------------------------------------------------------ %
 \clearpage
 \bibliography{Includes/Bibliography/all.bib}
+\clearpage
+\input{Includes/supplementary}
 
 \end{document}
