--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -1428,6 +1428,17 @@
  year={2013},
  publisher={Elsevier}
 }
+
+@article{schenk2013imaging,
+  title={Imaging nanocarbon materials: soot particles in flames are not structurally homogeneous},
+  author={Schenk, Marina and Lieb, Sydnie and Vieker, Henning and Beyer, Andr{\'e} and G{\"o}lzh{\"a}user, Armin and Wang, Hai and Kohse-H{\"o}inghaus, Katharina},
+  journal={ChemPhysChem},
+  volume={14},
+  number={14},
+  pages={3248--3254},
+  year={2013},
+  publisher={Wiley Online Library}
+}
 @article{myhre2014anthropogenic,
   title={Anthropogenic and natural radiative forcing},
   author={Myhre, Gunnar and Shindell, Drew and Pongratz, Julia},
@@ -2110,6 +2121,27 @@
   year={2019},
   publisher={ACS Publications}
 }
+
+@article{commodo2019early,
+  title={On the early stages of soot formation: Molecular structure elucidation by high-resolution atomic force microscopy},
+  author={Commodo, Mario and Kaiser, Katharina and De Falco, Gianluigi and Minutolo, Patrizia and Schulz, Fabian and D'Anna, Andrea and Gross, Leo},
+  journal={Combustion and Flame},
+  volume={205},
+  pages={154--164},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{schulz2019insights,
+  title={Insights into incipient soot formation by atomic force microscopy},
+  author={Schulz, Fabian and Commodo, Mario and Kaiser, Katharina and De Falco, Gianluigi and Minutolo, Patrizia and Meyer, Gerhard and DAnna, Andrea and Gross, Leo},
+  journal={Proceedings of the Combustion Institute},
+  volume={37},
+  number={1},
+  pages={885--892},
+  year={2019},
+  publisher={Elsevier}
+}
 @article{2020SciPy,
   author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
             Haberland, Matt and Reddy, Tyler and Cournapeau, David and
@@ -2335,6 +2367,16 @@
   year={2021},
   publisher={Elsevier}
 }
+
+@article{kholghy2021morphology,
+  title={Morphology, composition and optical properties of jet engine-like soot made by a spray flame},
+  author={Kholghy, M Reza and DeRosa, Valentina G},
+  journal={Combustion and Flame},
+  volume={231},
+  pages={111480},
+  year={2021},
+  publisher={Elsevier}
+}
 @article{naseri2022simulating,
   title={Simulating yield and morphology of carbonaceous nanoparticles during fuel pyrolysis in laminar flow reactors enabled by reactive inception and aromatic adsorption},
   author={Naseri, Ali and Kholghy, M Reza and Juan, Neil A and Thomson, Murray J},
@@ -2453,6 +2495,16 @@
   journal={Combustion and Flame},
   volume={253},
   pages={112784},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@incollection{dames2023plasma,
+  title={Plasma chemistry and plasma reactors for turquoise hydrogen and carbon nanomaterials production},
+  author={Dames, Enoch and Rohani, Vandad and Fulcheri, Laurent},
+  booktitle={Advances in Chemical Engineering},
+  volume={61},
+  pages={253--317},
   year={2023},
   publisher={Elsevier}
 }
