--- a/Includes/introduction.tex
+++ b/Includes/introduction.tex
@@ -1,18 +1,34 @@
 \section{Introduction}
-The formation of carbonaceous nanoparticles such as soot and Carbon Black (CB) is a complex and multi-scale process that involves chemical reactions, heat transfer, fluid and particle dynamics and spans over wide length ($\sim$ $10^{-12}$ to 1 m) and time ($\sim$$10^{-15}$ to 1 s) scales.  Understanding the effect of process parameters on particle concentration, morphology, and composition is not trivial, but crucial due to health and environmental impacts of soot and functional properties of CB. 
+The formation of carbonaceous nanoparticles such as soot and Carbon Black (CB) is a complex and multi-scale process that involves chemical reactions, heat transfer, fluid and particle dynamics and spans over wide length ($\sim$ $10^{-12}$ to 1 m) and time ($\sim$$10^{-15}$ to 1 s) scales. Fig.~\ref{fig:sootscales} demonstrates the length and time scales relevant to different stages of soot formation from PAH precursors to incipient, nascent and mature soot in flames. Understanding the effect of process parameters on particle concentration, morphology, and composition is not trivial, but crucial due to health and environmental impacts of soot and functional properties of CB.
 %Soot particle are broad-band light absorbers~\cite{d2009combustion}, and are emitted in large scales ($\approx$9.5 megatons of soot) acting as the third strongest contributor to climate change after methane and carbon dioxide~\citep{myhre2014anthropogenic}. Because of their small size (classified as $\mathrm{PM_{2.5}}$), soot particles can deposit on lung tissues and penetrate other organs through the bloodstream~\citep{borm2004inhaled} and cause asthma~\citep{niranjan2017toxicological} and heart disease~\citep{nichols2013systematic}. On the other hand, CB is the largest flame-made nanomaterial by production value and volume ($\sim$15 megatons per year with a worth of \$17B) extensively used as a reinforcing agent in rubber and tire industries~\citep{international2016carbon}, and conductive additive in lithium-ion batteries~\citep{Palomares2010}. 
-Soot is a broad-band light absorbers~\cite{d2009combustion}, and is emitted in large scales ($\approx$9.5 megatons of soot) acting as the third strongest contributor to climate change after methane and carbon dioxide~\citep{myhre2014anthropogenic}. Its fine particulate nature ($\mathrm{PM_{2.5}}$) also raises health concerns~\citep{borm2004inhaled}. In contrast, CB, the largest flame-made nanomaterial by production volume ($\sim$15 megatons annually), plays a critical role in industrial applications, including rubber reinforcement~\citep{international2016carbon} and lithium-ion battery technologies~\citep{Palomares2010}.
+Soot is a broad-band light absorber~\cite{d2009combustion}, and is emitted in large scales ($\approx$9.5 megatons) acting as the third strongest contributor to climate change after methane and carbon dioxide~\citep{myhre2014anthropogenic}. Its fine particulate nature ($\mathrm{PM_{2.5}}$) also raises health concerns~\citep{borm2004inhaled}. In contrast, CB, the largest flame-made nanomaterial by production volume ($\sim$15 megatons annually), plays a critical role in industrial applications, including rubber reinforcement~\citep{international2016carbon} and lithium-ion battery technologies~\citep{Palomares2010}.
+
+
+\begin{figure}[H]
+	\centering
+	\begin{tikzpicture}
+		\draw (0, 0) node[inner sep=0] 	{\includegraphics[width=0.8\textwidth]{Figures/Introduction/tlscales.jpg}};
+		\draw (-2.7, -1.4) node[text=magenta] {\scriptsize{\cite{commodo2019early}}};
+		\draw (-0.1, 0.9) node[text=red] {\scriptsize{\cite{schulz2019insights}}};
+		\draw (1.65, -0.23) node[text=green] {\scriptsize{\cite{schenk2013imaging}}};
+		\draw (3.15, 0.65) node[text=cyan] {\scriptsize{\cite{kholghy2021morphology}}};					
+		
+	\end{tikzpicture}
+	\caption{The time and length scales of the processes involved in soot formation spans over a wide range including molecular reactions between precursors, surface growth and coagulation of incipient and nascent soot particles and their maturity that depends on the temperature-time-history determined by flame velocity and temperature.}
+	\label{fig:sootscales}
+\end{figure}
 
 %CB is primarily manufactured by the furnace process which suffers from low mass yield (50-60$\%$ carbon conversion \citep{dames2023plasma}) and excessive emission, generating 4 tons of $\mathrm{CO_2}$ per each ton of product on average~\citep{bansal1993carbon}. Alternative technologies such as plasma-powered reactors for co-generation of hydrogen and CB from methane decomposition has drawn considerable interest~\cite{li2017experimental, fulcheri2023energy, patlolla2023review} thanks to advantages over conventional methods in terms of yield and reduction of $\mathrm{CO_2}$ emission or other pollutants~\citep{cho2004conversion}. 
 
 %Controlling CB yield, structure, morphology and composition is crucial to produce specific grades of CB tailored for various applications in both conventional (e.g. furnace process) and new production methods (e.g. ~\cite{li2017experimental, fulcheri2023energy, patlolla2023review}). However, the effect of process parameters such as feedstock composition, pressure, and temperature-time-history on CB properties has not been completely understood yet due to complexities of gas phase chemistry and CB complicated formation process (as it will discussed in the following). Therefore, there is a clear need for robust computational models to predict yield, particle structure and composition under different process conditions~\citep{park2005influence} and to reduce soot emission in combustion devices.
 
-Controlling CB yield, structure, morphology, and composition is essential for producing specific grades tailored to various applications in both conventional (e.g., furnace process \citep{dames2023plasma}) and emerging production methods~\citep{li2017experimental, fulcheri2023energy, patlolla2023review}. However, the influence of process parameters such as feedstock composition, pressure, and temperature-time history on CB properties remains incompletely understood due to the complexities of gas-phase chemistry and the intricate nature of CB formation (as discussed in the following sections). This highlights the need for robust computational models to predict yield, particle structure, and composition under different process conditions~\citep{park2005influence} and to mitigate soot emissions in combustion systems.
+Controlling CB yield, structure, morphology, and composition is essential for producing specific grades tailored to various applications in both conventional (e.g., furnace process \citep{dames2023plasma}) and emerging production methods~\citep{li2017experimental, fulcheri2023energy, patlolla2023review}. However, the influence of process parameters such as feedstock composition, pressure, and temperature-time history on CB properties remains incompletely understood due to the complexities of gas-phase chemistry and the intricate nature of CB formation (as discussed in the following sections). This highlights the need for robust computational models to predict yield, particle structure, and composition under different process conditions and to mitigate soot emissions in combustion systems.
 
-\textit{"soot"} and \textit{"Carbon Black"} are distinct materials in terms of chemical properties and synthesis process~\cite{watson2001carbon}. While soot usually refers to the unwanted particulate matter formed during incomplete combustion with variable organic content and a large variation in carbon to hydrogen (C/H) ratio~\citep{watson2001carbon}, CB is commercially produced under highly controlled partial combustion or thermal decomposition of hydrocarbons. Soot particles generated under controlled laboratory condition has similar structure and composition to CB. The mature soot formed in methane and ethylene premixed flame can reach 95\% elemental C/H ratio~\cite{russo2015dehydrogenation}, which is close to CB composition. The comparison of transmission electron microscopy (TEM) images of industrially produced CB~\citep{singh2018nanostructure} with soot sampled from diesel fuel~\citep{vander2007hrtem, lapuerta2017morphological} indicates similarity of their morphology and structure. Hereafter, soot will be used to collectively refer to carbonaceous nanoparticles produced in during combustion/pyrolysis processes.
+\textit{"Soot"} and \textit{"Carbon Black"} are distinct materials in terms of chemical properties and synthesis process~\cite{watson2001carbon}. While soot usually refers to the unwanted particulate matter formed during incomplete combustion with variable organic content and a large variation in carbon to hydrogen (C/H) ratio~\citep{watson2001carbon}, CB is commercially produced under highly controlled partial combustion or thermal decomposition of hydrocarbons. However, soot particles generated under controlled laboratory condition has similar structure and composition to CB. The mature soot formed in methane and ethylene premixed flame can reach 95\% elemental C/H ratio~\cite{russo2015dehydrogenation}, which is close to CB composition. The comparison of Transmission Electron Microscopy (TEM) images of industrially produced CB~\citep{singh2018nanostructure} with soot sampled from diesel fuel~\citep{vander2007hrtem, lapuerta2017morphological} indicates similarity of their morphology and structure. Hereafter, soot will be used to collectively refer to carbonaceous nanoparticles produced during combustion/pyrolysis processes.
 
 Soot formation and evolution are believed to begin with the formation of Polycyclic Aromatic Hydrocarbons (PAHs) in the gas phase, followed by the transition of PAHs, which are widely accepted as major contributors to soot inception, into incipient particles—a process known as \textit{soot inception}.
-This description of soot evolution is substantiated by experimental evidence. Transmission Electron Microscopy (TEM) analyses of soot sampled from flames~\citep{lapuerta2017morphological}, reactors~\citep{ono2017experimental}, and engines~\citep{wei2020morphology} across various fuels and process conditions consistently reveal a fractal-like morphology, characterized by agglomerates of primary particles.The transition of PAHs into incipient soot, or soot inception, remains poorly understood at the level of pathways and elementary reactions~\citep{Wang2011}. This lack of understanding stems primarily from uncertainties in PAH chemistry and the kinetics of PAH growth into soot particles, a process that is highly reversible and thus sensitive to local conditions such as temperature, pressure, and the concentrations of intermediate species~\citep{Wang2011}.
+%This description of soot evolution is substantiated by experimental evidence. Transmission Electron Microscopy (TEM) analyses of soot sampled from flames~\citep{lapuerta2017morphological}, reactors~\citep{ono2017experimental}, and engines~\citep{wei2020morphology} across various fuels and process conditions consistently reveal a fractal-like morphology, characterized by agglomerates of primary particles.
+The transition of PAHs into incipient soot, or soot inception, remains poorly understood at the level of pathways and elementary reactions~\citep{Wang2011}. This lack of understanding stems primarily from uncertainties in PAH chemistry and the kinetics of PAH growth into soot particles, a process that is highly reversible and thus sensitive to local conditions such as temperature, pressure, and the concentrations of intermediate species~\citep{Wang2011}.
 
 %The growth of PAHs beyond first ring (benzene) is predominantly driven by so-called hydrogen abstraction carbon (acetylene) addition (HACA) mechanism~\citep{frenklach2002reaction} where a hydrogen radical abstracts an hydrogen atom at the edge of PAH, providing a reactive site for acetylene addition. The kinetic reversibility of HACA opens the door for competing pathways such as chain reactions of resonance-stabilized radical (RSR). Propargyl is a prominent example of these radicals, whose combination is known as a major contributor to benzene formation~\citep{fahr1989reactions}. Built on this hypothesis, \citet{johansson2018resonance} proposed a radical-driven growth mechanism by addition of vinyl ($\mathrm{C_2H_3}$) starting from cyclopentadienyl ($\mathrm{C_5H_5}$) to larger hydrocarbon radicals that can survive long enough in high temperatures to react with other radicals, PAHs and unsaturated aliphatic species,
 %through radical chain reactions. However, low concentrations of these radicals limit the growth rate through RSR pathways~\citep{frenklach2020mechanism}. Moreover, some of the intermediate steps for radical regeneration such as formation of vinylcyclopentadienyl were shown to be kinetically unfavorable~\citep{frenklach2020mechanism} compared to HACA. Regardless of their mechanistics, these sequential growth mechanisms, termed as \textit{chemical growth} cannot account for rapid soot formation~\citep{frenklach2002reaction} and its nanostructure~\citep{frenklach1988comment}.
@@ -37,7 +53,7 @@ This description of soot evolution is substantiated by experimental evidence. Tr
 %Despite the gaps in fundamental understanding of soot formation and limitations of diagnostics methods, models have been developed describe the soot inception and growth. These models have been formulated as a set of clear pathways that explain soot inception based on collisions of PAH molecules. They have to be consistent with current knowledge of soot formation mechanisms, feasible to be coupled with chemistry and particle dynamics models, and able to predict soot mass, PSD and morphology observed in flames and reactors.
 
 The classic description of soot inception relies on PAH dimerization where collision of two PAH molecules (monomers in this context) forms a dimer held together by Van der Wales forces~\citep{frenklach1991detailed}. The dimerization is an irreversible process with an efficiency that accounts for the reversibility or dissociation of dimers. The theory postulates that PAH growth continues by sequential addition of monomers forming stacks of dimers, trimers, tetramers and so on to reach a certain mass threshold that marks the emergence of incipient soot~\citep{frenklach1991detailed}, but for practical purposes, a dimer is usually considered as incipient soot. Here, we call this model \textit{Irreversible Dimerization}. 
-Irreversible Dimerization has been used to predict soot formation in burner-stabilized premixed~\citep{salenbauch2015modeling, desgroux2017comparative}, counterflow diffusion flames~\citep{wang2015soot, xu2021experimental}, coflow diffusion flames~\citep{kholghy2016core, veshkini2016understanding}. A collision efficiency factor ranging between $10^{-6}$ to 1 is also employed to adjust the inception flux and PAH adsorption rates to achieve desired soot mass and size distribution. PAHs of moderate sizes such as pyrene (4 rings) to coronene (7 rings) have been considered as the starting point of inception due to their thermodynamic instability that justifies the irreversibility at high temperatures~\citep{frenklach1991detailed}. However, the theoretical calculations~\citep{miller1985calculations} and experiments~\citep{sabbah2010exploring} indicated that PAH dimerization is highly reversible in flame conditions. The inception flux of irreversible dimerization is mainly controlled by PAH concentration due to its weak temperature dependence, so it produces new particles at low temperatures (even less than 500 K)~\citep{naseri2022simulating} despite experimental evidence for termination of inception below 1200 K~\citep{sanchez2012polycyclic, cho2016synthesis}. 
+Irreversible Dimerization has been used to predict soot formation in burner-stabilized premixed~\citep{salenbauch2015modeling, desgroux2017comparative}, counterflow diffusion flames~\citep{wang2015soot, xu2021experimental}, coflow diffusion flames~\citep{kholghy2016core, veshkini2016understanding}. A collision efficiency factor ranging between $10^{-6}$ and 1 is also employed to adjust the inception flux and PAH adsorption rates to achieve desired soot mass and size distribution. PAHs of moderate sizes such as pyrene (4 rings) to coronene (7 rings) have been considered as the starting point of inception due to their thermodynamic instability that justifies the irreversibility at high temperatures~\citep{frenklach1991detailed}. However, the theoretical calculations~\citep{miller1985calculations} and experiments~\citep{sabbah2010exploring} indicated that PAH dimerization is highly reversible in flame conditions. The inception flux of irreversible dimerization is mainly controlled by PAH concentration due to its weak temperature dependence, so it produces new particles at low temperatures (even less than 500 K)~\citep{naseri2022simulating} despite experimental evidence for termination of inception below 1200 K~\citep{sanchez2012polycyclic, cho2016synthesis}. 
 
 %Also, the arbitrary selection of efficiency factors alters the distribution of mass between inception of surface growth that could significantly change soot mass, PSD, and morphology~\citep{saffaripour2014experimental}. 
 
@@ -51,12 +67,7 @@ Irreversible Dimerization has been used to predict soot formation in burner-stab
 
 %  are limited by possible ~\citep{buesser2012design} due to coupling with gas chemistry~\cite{Wang2011}, dependence on local temperature~\citep{gleason2018effect} and pressure~\cite{gleason2021pahs}. It has also been challenging to pinpoint the start of inception because of its short time scales in the order $10^{-9}$ s~\citep{buesser2012design}, the lack of a decisive criterion to distinguish molecules from particles~\citep{d2009combustion}, and the overlap of inception with particle growth and agglomeration~\cite{martin2022soot}. Despite these limitations and challenges, our knowledge about soot formation has significantly increased thanks to advances in diagnostics methods and reaction mechanism development. 
 
-%\begin{figure}[!htbp]
-%	\centering
-%	\includegraphics[height=80mm, ]{Figures/Introduction/schematics.jpg}
-%	\caption{The range of time and length scales of the processes involved in soot formation from molecular reactions to particle-fluid interaction in flames}
-%	\label{fig:sootscales}
-%\end{figure}
+
 
 
 
@@ -74,12 +85,12 @@ Irreversible Dimerization has been used to predict soot formation in burner-stab
 
 %\citet{eaves2015importance} relaxed the irreversibility assumption, and developed a reversible clustering model to simulate inception using an array of PAHs from naphthalene to benzo-pyrene. Building on that work, 
 
-\citet{kholghy2019role} emphasized on the necessity of chemical bond formation after physical PAH clustering for accurate prediction of volume fraction, primary particle diameter and PSD in ethylene coflow diffusion flames. Later, \citet{kholghy2018reactive} proposed the \textit{"Reactive Dimerization"} model which starts with reversible collision of PAHs leading to physical dimers held with vdW forces that are graphitized and form chemically-bonded dimers that serve as soot incipient particles that grow via  coagulation and surface reactions. They also performed a systematic analysis on the contribution of different PAHs, and concluded that one- and two-ring aromatics account for almost all of inception flux in the so-called \textit{"sooting flame"}~\citep{desgroux2017comparative}. However, \citet{frenklach2020mechanism} pointed out that an inception model that initiated with a highly reversible step similar to Reactive Dimerization~\citep{kholghy2018reactive} cannot produce sufficient flux of particles to match measurements of the benchmark burner-stabilized stagnation flame~\citep{abid2009quantitative}. Instead, they proposed a Hydrogen-Abstraction/Carbon-Addition (HACA)-driven mechanism where addition of a monomer molecule to its radical activated by hydrogen abstraction forms a stable dimer via an E-Bridge bond formation, and this sequential process continues to form trimers, tetramers, and larger PAH clusters. \citet{blanquart2009joint} proposed a two-step irreversible inception model were self collision of PAH with specified efficiencies results in formation of dimers that collide and subsequently coalesce into an incipient soot.
+\citet{kholghy2019role} emphasized on the necessity of chemical bond formation after physical PAH clustering for accurate prediction of volume fraction, primary particle diameter and Particle Size Distribution (PSD) in ethylene coflow diffusion flames. Later, \citet{kholghy2018reactive} proposed the \textit{"Reactive Dimerization"} model which starts with reversible collision of PAHs leading to physical dimers held with vdW forces that are graphitized and form chemically-bonded dimers that serve as soot incipient particles that grow via  coagulation and surface reactions. They also performed a systematic analysis on the contribution of different PAHs, and concluded that one- and two-ring aromatics account for almost all of inception flux in the so-called \textit{"sooting flame"}~\citep{desgroux2017comparative}. However, \citet{frenklach2020mechanism} pointed out that an inception model that initiated with a highly reversible step similar to Reactive Dimerization~\citep{kholghy2018reactive} cannot produce sufficient flux of particles to match measurements of the benchmark burner-stabilized stagnation flame~\citep{abid2009quantitative}. Instead, they proposed the H-abstraction-$\mathrm{C_2H_2}$/Carbon-addition  mechanism~\citep{frenklach1991detailed, appel2000kinetic} (HACA)-driven mechanism where addition of a monomer molecule to its radical activated by hydrogen abstraction forms a stable dimer via an E-Bridge bond formation, and this sequential process continues to form trimers, tetramers, and larger PAH clusters. \citet{blanquart2009joint} proposed a two-step irreversible inception model were self collision of PAH with specified efficiencies results in formation of dimers that collide and subsequently coalesce into an incipient soot.
 
 The gas-phase chemistry of aromatics can be extended to account for chemical growth of incipient soot via surface reactions~\citep{frenklach2002reaction}. This hypothesis, known as “chemical similarity” postulates that the reactions occurring on the soot surface are similar to those involving large molecules of PAHs in the gas phase. It also provides means to describe the rates of surface growth and particle oxidation in
 terms of elementary chemical reactions. In other words, it is assumed that the surface of soot particles is made up of lateral faces of larges PAHs covered with C-H bonds.
 This is the basis for HACA mechanism~\citep{frenklach1991detailed, appel2000kinetic}  that assumes the soot surface to consist of hydrogenated sites with a predefined density. Mass growth on soot surface requires H-abstraction to form a radical
-site, followed by acetylene attack similar to growth of PAH molecules in the gas-phase. The reactivity of these sites changes with time and temperature~\citep{woods1991soot, dasch1985decay}, described as soot aging. For modelling purposes, a temperature-dependent surface reactivity, usually represented by $\alpha$, was introduced to account for these effects. \citet{appel2000kinetic} showed $\alpha$ changes with temperature and particle size.
+site, followed by acetylene attack similar to growth of PAH molecules in the gas-phase. The reactivity of these sites changes with time and temperature~\citep{woods1991soot, dasch1985decay}, described as soot aging. For modelling purposes, a temperature-dependent surface reactivity, usually represented by $\alpha$, was introduced to account for the effect of temperature-time-history. \citet{appel2000kinetic} showed $\alpha$ changes with temperature and particle size.
 
 % However, soot mass growth without the presence of H radicals~\citep{singh2006numerical} indicated the incompleteness of the HACA mechanism to describe the entire process of soot surface growth.
 
@@ -91,13 +102,13 @@ The collision frequency of agglomerates depends on their evolving fractal-like m
 
 Particle morphology, governed by inception, surface growth, and agglomeration, can be precisely tracked using mesoscale simulations such as Discrete Element Modeling (DEM)~\citep{Kelesidis2017Flame}. However, these methods are computationally expensive, and integrating them with chemical kinetics in Computational Fluid Dynamics (CFD) frameworks is challenging~\citep{kelesidis2021perspective}. Consequently, their application is often limited to canonical scenarios where particle dynamics are solved independently of chemistry and flow dynamics—For instance, by populating the simulation domain with incipient particles—thereby bypassing the inception step—and neglecting gas removal or addition associated with soot formation~\citep{Kelesidis2017} as it is difficult to have a particle dynamics modeled fully-coupled with gas chemistry. 
 
-As a computationally efficient alternative, particle dynamics can be tracked by Eulerian approaches such as the Method of Moments (MOM)~\citep{kazakov1998dynamic} or Monodisperse Population Balance Models (MPBM)~\citep{kruis1993simple}. Such models only track average particle properties (e.g. moment ratios) and their accuracy could be limited if unrealistic assumptions (e.g. approximating agglomerates as monodisperse and perfect spheres) are used. However, when inception and surface growth are short~\citep{Spicer2002} and high particle (number) concentrations are formed~\cite{Kelesidis2017}, they lead to rapid attainment of self-preserving size distributions (SPSD) and agglomerates having asymptotic structure~\citep{Goudeli2016}. In this case a MPBM or MOM can be assembled on a firm scientific basis with accuracy on par with DEM~\citep{Kelesidis2017Flame} and experimental data ~\citep{abid2008evolution, ma2013soot, camacho2015mobility}. Such models can be readily interfaced with CFD simulations~\citep{grohn2012fluid} without significant computational cost, making them ideal for three-dimensional and even turbulent flame simulations. 
+As a computationally efficient alternative, particle dynamics can be tracked by Eulerian approaches such as the Method of Moments (MOM)~\citep{kazakov1998dynamic} or Monodisperse Population Balance Models (MPBM)~\citep{kruis1993simple}. Such models only track average particle properties (e.g. moment ratios) and their accuracy could be limited if unrealistic assumptions (e.g. approximating agglomerates as monodisperse and perfect spheres) are used. However, when inception and surface growth are short~\citep{Spicer2002} and high particle number concentrations are formed~\cite{Kelesidis2017}, they lead to rapid attainment of SPSD and agglomerates having asymptotic structure~\citep{Goudeli2016}. In this case a MPBM or MOM can be assembled on a firm scientific basis with accuracy on par with DEM~\citep{Kelesidis2017Flame} and experimental data ~\citep{abid2008evolution, ma2013soot, camacho2015mobility}. Such models can be readily interfaced with CFD simulations~\citep{grohn2012fluid} without significant computational cost, making them ideal for three-dimensional and even turbulent flame simulations. 
 
-The MOM tracks moments of the PSD and estimates average particle properties such as mass~\citep{pratsinis1988simultaneous}, surface area~\citep{blanquart2009joint}, the number of constituent primary particles per agglomerate, ${n_p}$~\citep{kazakov1998dynamic}, or even particle composition~\citep{blanquart2009analyzing} using the ratio of the moments. The MOM with interpolative closure (MOMIC) was developed to predict simultaneous nucleation, surface growth and coagulation of soot agglomerates and estimate its PSD with six equations~\citep{kazakov1998dynamic}. To calculate source terms of the transported moments, additional moments that are not tracked are needed preventing the closure of the system of differential equations with the MOM~\citep{pratsinis1988simultaneous, frenklach1987aerosol}. Thus, often the PSD shape is assumed a priori~\citep{pratsinis1988simultaneous} or extra equations are solved to estimate it~\citep{kruis1993simple}.In contrast, the MPBMs do not have the closure problem and calculate average particle properties by tracking their total concentration, mass \citep{kruis1993simple} and area~\citep{tsantilis2004soft, lindstedt1994simplified}. 
+The MOM tracks moments of the PSD and estimates average particle properties such as mass~\citep{pratsinis1988simultaneous}, surface area~\citep{blanquart2009joint}, the number of constituent primary particles per agglomerate, ${n_p}$~\citep{kazakov1998dynamic}, or even particle composition~\citep{blanquart2009analyzing} using the ratio of the moments. The MOM with interpolative closure (MOMIC) was developed to predict simultaneous nucleation, surface growth and coagulation of soot agglomerates and estimate its PSD with six equations~\citep{kazakov1998dynamic}. To calculate source terms of the transported moments, additional moments that are not tracked are needed preventing the closure of the system of differential equations with the MOM~\citep{pratsinis1988simultaneous, frenklach1987aerosol}. Thus, often the PSD shape is assumed a priori~\citep{pratsinis1988simultaneous} or extra equations are solved to estimate it~\citep{kruis1993simple}. In contrast, the MPBMs do not have the closure problem and calculate average particle properties by tracking their total concentration, mass \citep{kruis1993simple} and area~\citep{tsantilis2004soft, lindstedt1994simplified}. 
 
-Sectional Population Balance Models (SPBMs), similar to MPBMs but capable of tracking agglomerate and primary particle size distributions~\citep{Xiong1993}, are widely used in complex laminar~\citep{kholghy2016core} and turbulent flows~\citep{schiener2019transported}. Coupled with relations for fractal-like structure~\citep{matsoukas1991dynamics} and collision frequency~\citep{fuchs1964mechanics}, SPBMs accurately model particle size distribution, morphology, and composition. However, their computational cost rises exponentially with the number of sections~\citep{xiong1993formation} and tracked properties~\citep{kholghy2016core}.
+Sectional Population Balance Models (SPBMs), similar to MPBMs but capable of tracking agglomerate and primary PSDs~\citep{Xiong1993}, are widely used in complex laminar~\citep{kholghy2016core} and turbulent flows~\citep{schiener2019transported}. Coupled with relations for fractal-like structure~\citep{matsoukas1991dynamics} and collision frequency~\citep{fuchs1964mechanics}, SPBMs accurately model particle size distribution, morphology, and composition. However, their computational cost rises exponentially with the number of sections~\citep{xiong1993formation} and tracked properties~\citep{kholghy2016core}.
 %, so typically only one property (e.g., agglomerate mass) is modeled to reduce expense. In multidimensional simulations, this limitation prevents accounting for fractal-like structure~\citep{smooke2005soot, aubagnac2018soot}, reducing SPBM accuracy in predicting surface growth, coagulation rates, and size distributions. 
-SPBMs are gaining attention, due to the recent increase in computational resources, for simulating laminar and turbulent benchmark flames in two-dimensional domains, even with moderately large chemical mechanisms. For example, the CoFlame solver~\citep{eaves2016coflame}, designed to simulate laminar diffusion flames in axisymmetric domains using SPBM, has been employed in numerous studies, demonstrating its ability to accurately capture PSD and other morphological properties~\citep{dworkin2011application, liu2015numerical}. Kholghy et al. extended the SPBM in CoFlame to predict soot maturity by analyzing the equilibrium nanostructure of PAHs within soot primary particles, distinguishing nascent from mature soot based on an isotropic core-graphitic shell structure and surface PAH configuration~\citep{kholghy2016core}. More recent developments have further refined SPBMs by incorporating the persistent radical nature of soot particles, improving the description of nucleation, surface growth, and oxidation in laminar premixed and counterflow flames~\citep{nobili2022modeling}. This approach employs a discrete-sectional method in which soot particles are tracked using discrete size bins (BINs), allowing detailed resolution of the size distribution and chemical composition. The algorithm systematically groups PAHs, primary particles, and aggregates into BINs based on carbon atom count and hydrogen-to-carbon ratio, capturing the evolution of particle size and morphology. By treating large PAHs and soot aggregates as resonantly stabilized radicals, the model reduces the reliance on explicit H-abstraction reactions and improves agreement with experimental data. However, the implementation relies on a customized chemical mechanism, which imposes constraints on modifying individual soot evolution processes, such as inception, growth, or oxidation, without adapting the entire framework~\citep{cuoci2015opensmoke++, cuoci2013computational}.
+SPBMs are gaining attention, due to the recent increase in computational resources, for simulating laminar and turbulent benchmark flames in two-dimensional domains, even with moderately large chemical mechanisms. For example, the CoFlame solver~\citep{eaves2016coflame}, designed to simulate laminar diffusion flames in axisymmetric domains using SPBM, has been employed in numerous studies, demonstrating its ability to accurately capture soot morphological properties~\citep{dworkin2011application, liu2015numerical}. Kholghy et al. extended the SPBM in CoFlame to predict soot maturity by analyzing the equilibrium nanostructure of PAHs within soot primary particles, distinguishing nascent from mature soot based on an isotropic core-graphitic shell structure and surface PAH configuration~\citep{kholghy2016core}. More recent developments have further refined SPBMs by incorporating the persistent radical nature of soot particles, improving the description of nucleation, surface growth, and oxidation in laminar premixed and counterflow flames~\citep{nobili2022modeling}. This approach employs a sectional method in which soot particles are tracked using discrete size bins (BINs), allowing detailed resolution of the size distribution and chemical composition. The algorithm systematically groups PAHs, primary particles, and aggregates into BINs based on carbon atom count and H/C ratio, capturing the evolution of particle size and morphology. By treating large PAHs and soot aggregates as resonantly stabilized radicals, the model reduces the reliance on explicit H-abstraction reactions and improves agreement with experimental data. However, the implementation relies on a customized chemical mechanism, which imposes constraints on modifying individual soot evolution processes, such as inception, growth, or oxidation, without adapting the entire framework~\citep{cuoci2015opensmoke++, cuoci2013computational}.
 
 
 
@@ -139,7 +150,7 @@ SPBMs are gaining attention, due to the recent increase in computational resourc
 %	\label{fig:tooldesign}
 %\end{figure}
 
-Here, we develop a computational package, called \textit{omnisoot}, which integrates Cantera~\citep{cantera} as a chemistry solver to simulate soot formation in reduced-order dimensions. The package provides a versatile soot model that can be coupled with all reaction mechanisms. Two particle dynamics models—MPBM and SPBM—are incorporated, coupled with various soot inception and surface growth models, offering flexibility to study soot formation alongside gas-phase chemistry and predict its yield, morphology, composition, and size distribution. This package facilitates fundamental investigations of soot formation, including pathway analysis, reaction mechanism evaluation, and inception flux estimation, while also supporting process design and optimization of CB production in industrial reactors under diverse fuel compositions, temperatures, pressures, and residence times. The theoretical background and governing equations for sub-models of omnisoot are detailed in subsequent sections, followed by validation against benchmark DEM simulations and verification of mass and energy conservation across all models. Finally, three use cases—shock tubes, flow reactors, and well-stirred reactors—demonstrate capability of omnisoot to predict gas chemistry, soot yield, structure, and size distribution.
+Here, we develop a computational package, called \textit{omnisoot}, which integrates Cantera~\citep{cantera} as a chemistry solver to simulate soot formation in reduced-order dimensions. The package provides a versatile soot model that can be coupled with all reaction mechanisms. Two particle dynamics models—MPBM and SPBM—are incorporated, coupled with various soot inception and surface growth models, offering flexibility to study soot formation alongside gas-phase chemistry. This package facilitates fundamental investigations of soot formation, including pathway analysis, reaction mechanism evaluation, and inception flux estimation, while also supporting process design and optimization of CB production in industrial reactors under diverse fuel compositions, temperatures, pressures, and residence times. The theoretical background and governing equations for sub-models of omnisoot are detailed in subsequent sections, followed by validation against benchmark DEM simulations and verification of mass and energy conservation across all models. Finally, three use cases—shock tubes, flow reactors, and perfectly stirred reactors—demonstrate capability of omnisoot to predict gas chemistry, soot yield, structure, and size distribution.
 
 
 
