--- a/Includes/results/pfr.tex
+++ b/Includes/results/pfr.tex
@@ -1,21 +1,21 @@
 \subsection{Ethylene pyrolysis in a flow reactor}
 The plug flow reactor (PFR) model was used to simulate the pyrolysis of 0.6\% $\mathrm{C_2H_4}$–$\mathrm{N_2}$ in a 1.4 m-long, 16 mm-diameter flow reactor. Figure~\ref{fig:pfr_temp} shows the axial temperature profile used in the simulations. The maximum temperature, $\mathrm{T_{max}} = 1673$ K, was imposed on the model based on thermocouple measurements reported by~\citet{mei2019quantitative} for various flow rates along the reactor centerline. The temperature increases from 300 K at the reactor inlet to the hot zone, where it reaches within 10\% of $\mathrm{T_{max}}$. The length of the hot zone varies with flow rate due to advection, ranging from 0.71 m at $Q = 8$ L/min to 0.76 m at $Q = 12$ L/min. Near the reactor outlet, the temperature drops to approximately 650 K.
 
-The inception and PAH adsorption adjustment factors were varied to match the predicted particle size distribution (PSD) with experimental measurements at the reactor exit for flow rates of 8.5, 11, and 12 L/min, as shown in Figure~\ref{fig:pfr_psd}. The parametric analysis revealed that each inception model requires a unique set of adjustment factors to minimize the PSD prediction error across different flow rates. The KAUST mechanism~\citep{wang2013pah} was used to describe gas-phase chemistry, as it provided better agreement with the measured PSDs than the Caltech mechanism.
+The inception and PAH adsorption adjustment factors were varied to match the predicted PSD with experimental measurements at the reactor exit for flow rates of 8.5, 11, and 12 L/min, as shown in Figure~\ref{fig:pfr_psd}. The parametric analysis revealed that each inception model requires a unique set of adjustment factors to minimize the PSD prediction error across different flow rates. The KAUST mechanism~\citep{wang2013pah} was used to describe gas-phase chemistry, as it provided better agreement with the measured PSDs than the Caltech mechanism.
 
-A bimodal size distribution can be observed for Q=8 L/min (Figure~\ref{fig:pfr_psd}-a) that was attributed to the continuous inception~\citep{zhao2003measurement}. The comparison of simulations with measurements reveals different temperature dependence of inception models. Irreversible Dimerization and Dimer Coalescence (irreversible inception models) capture the bimodality of PSD in good agreement with the measurements, but the other two models predict a nearly unimodal PSD. The number concentration of the first section is lower by more than three orders of magnitude for Reactive Dimerization and EBridge Modified indicating the lack of active inception at the sampling location due the temperature drops near the end of reactor that suppresses soot inception.
+A bimodal size distribution can be observed for Q=8 L/min (Figure~\ref{fig:pfr_psd}a) that was attributed to the continuous inception~\citep{zhao2003measurement}. The comparison of simulations with measurements reveals different temperature dependence of inception models. Irreversible Dimerization and Dimer Coalescence models capture the bimodality of PSD in good agreement with the measurements, but the other two models predict a nearly unimodal PSD. The number concentration of the first section is lower by more than three orders of magnitude for Reactive Dimerization and E-Bridge Modified models indicating the lack of active inception at the sampling location due the temperature drops near the end of reactor that suppresses soot inception.
 
-All inception models capture the disappearance of the PSD shoulder at flow rates of 11 and 12 L/min. In these cases, the shorter particle residence time limits coagulation, preventing formation of a second peak. However, Reactive Dimerization and EBridge Modified still underpredict the number concentration of nascent particles by approximately one order of magnitude compared to the irreversible models.
+All inception models capture the disappearance of the PSD shoulder at flow rates of 11 and 12 L/min. In these cases, the shorter particle residence time limits coagulation, preventing formation of a second peak. However, Reactive Dimerization and E-Bridge Modified models still underpredict the number concentration of nascent particles by approximately one order of magnitude compared to the irreversible models.
 
-Figure~\ref{fig:pfr_psd} also presents the axial evolution of the total number concentration of agglomerates ($N_{agg}$). Predictions from all models agree closely up to $z \approx 1.1$ m, corresponding to the end of the hot zone. Beyond this point, $N_{agg}$ continues to increase for the irreversible models, which allow soot inception to proceed in cooler downstream regions. These models agree well with experimental data at 8 and 11 L/min but tend to overpredict $N_{agg}$ at 12 L/min.
+Figure~\ref{fig:pfr_Nagg} presents the axial evolution of $N_{agg}$. Predictions from all models agree closely up to $z \approx 1.1$ m, corresponding to the end of the hot zone. Beyond this point, $N_{agg}$ continues to increase for the irreversible models, which allow soot inception to proceed in cooler downstream regions. These models agree well with experimental data at 8 and 11 L/min but tend to overpredict $N_{agg}$ at 12 L/min.
 
-As shown in Figure~\ref{fig:pfr_Iinc}, soot inception flux rises sharply as the gas enters the hot zone. The axial location where the flux exceeds $10^7~\mathrm{cm^{-3}~s^{-1}}$ is similar across all inception models, as it is primarily determined by PAH chemistry. However, this location shifts downstream with increasing flow rate due to reduced residence time. Within the hot zone, differences among the inception models are minimal. Outside the hot zone, Irreversible Dimerization and Dimer Coalescence maintain high inception flux, while Reactive Dimerization and EBridge Modified predict a rapid decrease of more than three orders of magnitude due to cooling. Figure~\ref{fig:pfr_cmap} demonstrates the contribution of each pathway to total carbon mass of soot along the reactor that elucidate the link between the balance of inception and surface growth with particle morphology. The relative strength of inception decreases from 100\% to less than 5\% by z=1.1 m for all inception models leading to a gradual increase of $d_p$ and $d_m$. Irreversible Dimerization and Dimer Coalescence predict an increase in contribution of inception that resulting in the decline of $d_p$ while Reactive Dimerization and EBridge Modified predict a nearly constant $d_p$.
+As shown in Figure~\ref{fig:pfr_Iinc}, soot inception flux rises sharply as the gas enters the hot zone. The axial location where the flux exceeds $10^7~\mathrm{cm^{-3}~s^{-1}}$ is similar across all inception models, as it is primarily determined by PAH chemistry. However, this location shifts downstream with increasing flow rate due to reduced residence time. Within the hot zone, differences among the inception models are minimal. Outside the hot zone, Irreversible Dimerization and Dimer Coalescence models maintain high inception flux, while Reactive Dimerization and E-Bridge Modified models predict a rapid decrease of more than three orders of magnitude due to cooling. Figure~\ref{fig:pfr_cmap} demonstrates the contribution of each pathway to total carbon mass of soot along the reactor that elucidate the link between the balance of inception and surface growth with particle morphology. The relative strength of inception decreases from 100\% to less than 5\% by z=1.1 m for all inception models leading to a gradual increase of $d_p$ and $d_m$. Irreversible Dimerization and Dimer Coalescence models predict an increase in contribution of inception that resulting in the decline of $d_p$ while Reactive Dimerization and E-Bridge Modified models predict a nearly constant $d_p$.
 
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.45\textwidth]{Figures/Results/PFR/temperature_combined.pdf}
-	\caption{The centerline temperature along the reactor for Q=8, 11, and 12 L/mi interpolated from the thermocouple measurements~\citep{mei2019quantitative}. The yellow area represent the region with temperature larger than 1200 K.}
+	\caption{The centerline temperature along the reactor for $Q=$8, 11, and 12 L/min interpolated from the thermocouple measurements~\citep{mei2019quantitative}.}
 	\label{fig:pfr_temp} 
 \end{figure}
 
@@ -27,7 +27,7 @@ As shown in Figure~\ref{fig:pfr_Iinc}, soot inception flux rises sharply as the 
 		%\draw (1.77, 0.59) node {\tiny{\cite{mei2019quantitative}}};
 		\draw (6.63, -0.51) node {\scriptsize{\cite{mei2019quantitative}}};
 	\end{tikzpicture}
-	\caption{The particle size distribution at the end of PFR for Q=8.5 (a), 11 (b), and 12 L/min (c) obtained using KAUST mechanism and different inception models calibrated to match the predictions with measurement~\citep{mei2019quantitative}.}
+	\caption{The particle size distribution at the end of PFR for $Q=$8.5 (a), 11 (b), and 12 L/min (c) obtained using KAUST mechanism and different inception models calibrated to match the predictions with measurement~\citep{mei2019quantitative}.}
 	\label{fig:pfr_psd} 
 \end{figure}
 
@@ -37,14 +37,14 @@ As shown in Figure~\ref{fig:pfr_Iinc}, soot inception flux rises sharply as the 
 		\draw (0, 0) node[inner sep=0] 	{\includegraphics[width=1\textwidth]{Figures/Results/PFR/N_agg.pdf}};
 		\draw (4.85, -1.25) node {\tiny{\cite{mei2019quantitative}}};
 	\end{tikzpicture}
-	\caption{The total number of agglomerates along the PFR for Q=8.5 (a), 11 (b), and 12 L/min (c) obtained using KAUST mechanism and different inception models compared with data~\citep{mei2019quantitative}.}
+	\caption{The total number of agglomerates along the PFR for $Q=$8.5 (a), 11 (b), and 12 L/min (c) obtained using KAUST mechanism and different inception models compared with data~\citep{mei2019quantitative}.The yellow area represent the region with temperature larger than 1200 K.}
 	\label{fig:pfr_Nagg} 
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{Figures/Results/PFR/inception.pdf}
-	\caption{The soot inception flux along the PFR for Q=8.5 (a), 11 (b), and 12 L/min (c) obtained using KAUST mechanism and different inception models.}
+	\caption{The soot inception flux along the PFR for $Q=$8.5 (a), 11 (b), and 12 L/min (c) obtained using KAUST mechanism and different inception models.The yellow area represent the region with temperature larger than 1200 K.}
 	\label{fig:pfr_Iinc} 
 \end{figure}
 
@@ -52,6 +52,6 @@ As shown in Figure~\ref{fig:pfr_Iinc}, soot inception flux rises sharply as the 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.8\textwidth]{Figures/Results/PFR/C_tot_distmap.pdf}
-	\caption{The soot carbon mass from inception, PAH adsorption and HACA normalized by total soot carbon mass for Q=8.5 L/min along with primary particle $d_p$, and mobility, $d_m$ diameter obtained using KAUST mechanism and different inception models.}
+	\caption{The soot carbon mass from inception, PAH adsorption and HACA normalized by total soot carbon mass for $Q=$8.5 L/min along with $d_p$ and $d_m$ obtained using KAUST mechanism and different inception models.}
 	\label{fig:pfr_cmap} 
 \end{figure}
