--- a/Includes/title.tex
+++ b/Includes/title.tex
@@ -3,16 +3,16 @@
 		}
 	\renewcommand\baselinestretch{0.8}
 	\author{
-	Mohammad Adib\footnote{\scriptsize{Department of Mechanical and Aerospace Engineering, Carleton University, 1125 Colonel By Dr, Ottawa, ON K1S 5B6, Canada}},
+	Mohammad Adib{\vspace{0.4em}}\footnote{\scriptsize{Department of Mechanical and Aerospace Engineering, Carleton University, 1125 Colonel By Dr, Ottawa, ON K1S 5B6, Canada}}{\hspace{0.3em}}\textsuperscript{,}{\hspace{0.01em}}\footnote{\scriptsize{Correspondeing author}},
 	Sina Kazemi\textsuperscript{1}{\vspace{0.4em}},  
-	M. Reza Kholghy\textsuperscript{1, }\footnote{\scriptsize{Correspondeing author}} 
+	M. Reza Kholghy\textsuperscript{1,*} 
 }
 	\date{}
 	\maketitle
 	\renewcommand\baselinestretch{1.3}
 	
 	\begin{abstract}
-	A computational tool, \textit{omnisoot} was developed based on chemical kinetic functionalities of Cantera to describe formation of carbonaceous nanoparticles such as soot and Carbon Black (CB) from reaction of gaseous hydrocarbons. Four reactor models built in the tool can provide a simplified description of complex industrial processes. Omnisoot couples gas chemistry with the soot model that entails two different aerosol dynamics models, and four inception and surface growth models from the literature, which makes it a robust tool for analyzing particle yield and morphology in various experimental targets such as shock-tubes, and flow and well-stirred reactors. The integrated architecture of omnisoot enables highlighting the uncertainty in soot modelling that originates from gas chemistry and elucidating the difference between inception models in short and long residence times in the presence of active inception and surface growth and end of them. The temperature dependence of inception model significantly affects the particle size distribution measured at the end of a pyrolysis flow reactor where only irreversible models seem to predict the bimodality. The tool also provides essential information about the contribution of inception and surface growth to total soot mass as a determining factor in soot morphology. For example, in shock-tube pyrolysis of methane multiple combinations of inception and surface growth can minimize the prediction of carbon yield, but lead to remarkably different morphologies, which emphasizes the need for characterization of soot morphology to constrain inception and surface growth fluxes.
+	A computational tool, \textit{omnisoot}, was developed utilizing the chemical kinetics capabilities of Cantera to model the formation of carbonaceous nanoparticles, such as soot and carbon black (CB), from the reactions of gaseous hydrocarbons. Omnisoot integrates constant volume, constant pressure, perfectly stirred, and plug flow reactor models with four inception models from the literature, as well as two particles dynamics model: a monodisperse (MPBM) and a sectional population balance models (SPBM). This package serves as an integrated process design tool to predict soot mass, morphology, and composition under varying process conditions. The modeling approach accounts for soot inception, surface growth, and oxidation, coupled with detailed gas-phase chemistry, to close the mass and energy balances of the gas-particle system; subsequently, soot and gas-phase chemistry are linked to the particle dynamics models that consider the evolving fractal-like structure of soot agglomerates. The developed tool was employed to highlight the similarities and differences among the implemented inception models in predicting soot mass, morphology, and size distribution for three use-cases: methane pyrolysis in a shock tube, ethylene pyrolysis in a flow reactor, and ethylene combustion in a perfectly stirred reactor. The simulations of 5\%$\mathrm{CH_4}$ pyrolysis in shock-tube with short residence times($\approx1.5$ ms) demonstrated that multiple combinations of inception and surface growth rates minimized the prediction error of carbon yield but led to markedly different morphologies, emphasizing the need for measured data of soot morphology to constrain inception and surface growth rates. The comparison of simulation results in a pyrolysis flow reactor at three different flow rates suggested that only irreversible models can predict bimodality of particle size distribution. Moreover, the contributions of inception and surface growth to the total soot mass were used as determining factors in soot morphology. %Omnisoot is a robust tool that can help elucidate and reduce uncertainties in the simulation of soot formation from various sources and estimate the range of inception and surface growth rates to accurately predict soot yield, size, and morphology.
 		
 	\end{abstract}
 	
